environments/dev/example-app-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-2
  namespace: dev
spec:
  selector:
    app: example-app-2
  ports:
    - port: 80
      targetPort: 80
