environments/dev/example-app-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-2
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: example-app-2.10-0-0-200.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-app-2
                port:
                  number: 80
